[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "phylotypes"
version = "2.0.0_pre1"
description = "Group phylogenetically placed sequence variants into phylotypes"
readme = "README.md"
authors = [
    {name = "Jonathan Louis Golob", email = "j-dev@golob.org"}
]
license = {text = "MIT"}
maintainers = [
    {name = "Jonathan Louis Golob", email = "j-dev@golob.org"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "biopython",
    "scikit-bio",
    "numpy",
    "scikit-learn>=1.3.0",
    "torch",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/jgolob/phylotypes"
Repository = "https://github.com/jgolob/phylotypes"
Issues = "https://github.com/jgolob/phylotypes/issues"

[project.scripts]
phylotypes = "phylotypes.phylotypes:main"
add_phylotypes = "phylotypes.add_phylotypes:main"
phylotype_taxonomy = "phylotypes.phylotype_taxonomy:main"

[tool.poetry]
packages = [{include = "phylotypes", from = "src"}]
[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]
