[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "phylotypes"
version = "2.0.0_pre1"
description = "Group phylogenetically placed sequence variants into phylotypes"
readme = "README.md"
authors = [
    {name = "Jonathan Louis Golob", email = "j-dev@golob.org"}
]
license = {text = "MIT"}
maintainers = [
    {name = "Jonathan Louis Golob", email = "j-dev@golob.org"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "biopython",
    "scikit-bio",
    "numpy",
    "scikit-learn>=1.3.0",
    "torch",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/jgolob/phylotypes"
Repository = "https://github.com/jgolob/phylotypes"
Issues = "https://github.com/jgolob/phylotypes/issues"

[project.scripts]
phylotypes = "phylotypes.phylotypes:main"
add_phylotypes = "phylotypes.add_phylotypes:main"
phylotype_taxonomy = "phylotypes.phylotype_taxonomy:main"

[tool.poetry]
packages = [{include = "phylotypes", from = "src"}]
[dependency-groups]
dev = [
    "ty (>=0.0.1a1)",
    "ruff (>=0.14.3,<0.15.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "ipykernel (==6.31.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

# Ruff linting and formatting configuration (Google style)
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "TD",  # flake8-todos
    "FIX", # flake8-fixme
    "ERA", # eradicate
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN",    # All flake8-annotations (missing annotations for self/cls)
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D107",   # missing docstring in __init__
    "TD002",  # missing author in TODO
    "TD003",  # missing issue link on line following TODO
    "FIX002", # line contains TODO
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]
"tests/**/*" = ["S101", "D", "S603", "S607", "INP001"]
"examples/**/*" = ["T201", "D"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["phylotypes"]
force-sort-within-sections = true

# ty type checking configuration
[tool.ty.environment]
python-version = "3.10"

# Pre-commit hooks are configured in .pre-commit-config.yaml
# Install pre-commit hooks with: pre-commit install
# Run hooks on all files with: pre-commit run --all-files
